upgrade config dockerfile and docker-compose

--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ local_work=work
 spark_work=/home/jovyan/work
 image_name=notebook_docker_spark
 container_name=docker_spark_work
+
+# https://stackoverflow.com/questions/47112156/what-is-default-username-and-password-for-jupyterhub
+user_root="root"
+user="jovyan"
+password="jupyter"
